@@ -1,3 +1,7 @@
+2005-09-29  Steven Bosscher  <stevenb@suse.de>
+
+	* gcc.dg/pr23911.c: New test.
+
 2005-09-28  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/opt/pr19650.C: Use -w -fpermissive.
